@@ -1,3 +1,7 @@
+2004-11-04 Ian Rutt
+ * Added area considerations of mean_to_local subroutine in glimmer_interp.f90 (not used
+   in glimmer itself).
+
 2004-10-21 Ian Rutt
  * Sorted out water budgeting. This is something of a fudge, for although
    melt and run-off maps are determined reasonably well, an overall constant
